Fixed overflow of section

--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,7 @@ textarea.input {
 .section {
   overflow-y: auto;
   visibility: hidden;
+  overflow-x: hidden;
 }
 
 .section.swiper-slide-active {
